# Phasespace

./: .gitattributes  106A-ebasa_tracker.json  13A6_ebasa_led.json  CALIBRATION.md  Phasespace step-by-step guide.md  README.md  index.html  tw0-trackers.json
Ros_1/phasespace_ros/phasespace_ros/: README.md
Ros_1/phasespace_ros/phasespace_ros/phasespace/: CMakeLists.txt  package.xml
Ros_1/phasespace_ros/phasespace_ros/phasespace/launch/: phasespace.launch
Ros_1/phasespace_ros/phasespace_ros/phasespace/src/: rigid_tracker.cpp
Ros_1/phasespace_ros/phasespace_ros/phasespace_msgs/: CMakeLists.txt  package.xml
Ros_1/phasespace_ros/phasespace_ros/phasespace_msgs/msg/: Marker.msg  Rigid.msg
Ros_2/: Ebasa_tacker.json  fast_phasespace_client.py  phasespace_node_ros2.py
docs/: CNAME
extras/mnri-phasespace/: README.md
extras/mnri-phasespace/devel_include_phasespace/: Camera.h  Cameras.h  Marker.h  Markers.h  Rigid.h  Rigids.h
extras/mnri-phasespace/ros-node/: CMakeLists.txt
extras/mnri-phasespace/ros-node/src/: README.md  listener.cpp  psnode.cpp  psnode.cpp.bak
rosbag2_2026_03_10-17_28_50/: metadata.yaml  rosbag2_2026_03_10-17_28_50_0.mcap
visualization/: README.md  phasespace_bag_visualizer.py  phasespace_live_visualizer_ros2.py  phasespace_live_visualizer_web.py  phasespace_visualization_common.py
visualization/outputs/rosbag2_2026_03_10-17_28_50/: summary.json  trajectory_samples.csv
visualization/web_live/: app.js  index.html  styles.css
website/: calibration.html  ros-workflow.html  script.js  start-here.html  styles.css  tracker-setup.html
